--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
     <meta content='#212121' name='msapplication-navbutton-color'/>
     <link href='https://cdn.jsdelivr.net/gh/Markmix-Studios/msl-favicons/favicon.ico' rel='icon' type='image/x-icon'/>
     <meta content='Web Developer & Tech Enthusiast' name='description'/>
-    <meta content='1b.i.s.m.a.r.k_' property='og:title'/>
+    <meta content='Bismark The Philos BioLink' property='og:title'/>
     <link href='https://bio.markmixstudios.com' rel='canonical'/>
     <meta content='https://bio.markmixstudios.com/' property='og:url'/>
     <meta content='Web Developer & Tech Enthusiast' name='og:description'/>
     <meta rel='preload' content='https://blogger.googleusercontent.com/img/a/AVvXsEhzKpAygWNJ08LLagY4eXuRhNkZglrexrJM5GphJou1R6CeM_4SRDGqtIflmxbVhI8pCD6NlOSY35k5-JzDPowpvu-B6zMnwQBAl7FaHgBJMTRbB01pH5f8qZq6-Hsj468F4QzFQikO4se7UhIgw8OAIW0EKWsFlYFZtykg-bgDwh0CFuALy31QRHNi4Zc=s150' property='og:image'/>
-    <meta content='1b.i.s.m.a.r.k_' property='profile:username'/>
+    <meta content='@1b.i.s.m.a.r.k_' property='profile:username'/>
     <meta content='summary' name='twitter:card'/>
     <meta content='@1b.i.s.m.a.r.k_' name='twitter:title'/>
     <meta rel='preload' content='https://blogger.googleusercontent.com/img/a/AVvXsEhzKpAygWNJ08LLagY4eXuRhNkZglrexrJM5GphJou1R6CeM_4SRDGqtIflmxbVhI8pCD6NlOSY35k5-JzDPowpvu-B6zMnwQBAl7FaHgBJMTRbB01pH5f8qZq6-Hsj468F4QzFQikO4se7UhIgw8OAIW0EKWsFlYFZtykg-bgDwh0CFuALy31QRHNi4Zc=s150' property='twitter:image'/>
