--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <meta content='@1b.i.s.m.a.r.k_' property='profile:username'/>
     <meta content='summary' name='twitter:card'/>
     <meta content='@1b.i.s.m.a.r.k_' name='twitter:title'/>
-    <meta rel='preload' content='https://blogger.googleusercontent.com/img/a/AVvXsEhzKpAygWNJ08LLagY4eXuRhNkZglrexrJM5GphJou1R6CeM_4SRDGqtIflmxbVhI8pCD6NlOSY35k5-JzDPowpvu-B6zMnwQBAl7FaHgBJMTRbB01pH5f8qZq6-Hsj468F4QzFQikO4se7UhIgw8OAIW0EKWsFlYFZtykg-bgDwh0CFuALy31QRHNi4Zc=s150' property='twitter:image'/>
+    <meta rel='preload' content='https://cdn.jsdelivr.net/gh/bismarkagyapong/files@refs/heads/main/markmix-diamond-profile-pic.webp' property='twitter:image'/>
     <meta content='https://markmixstudios.com/' name='twitter:url'/>
     <link href='https://pro.fontawesome.com/releases/v5.15.0/css/all.css' rel='stylesheet' type='text/css'/>
     <link href='https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap' rel='stylesheet'/>
