--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@ a:link,a:visited,.widget_bottom h1,.widget_bottom .caption{color:#ffffff}.bg-mar
 </div>
     <div class='copyright-web'>
       <a expr:aria-label='data:blog.title' expr:href='data:blog.homepageUrl' expr:title='data:blog.title' rel='noopener nofollow' target='_blank'>
-        <img alt='Markmix logo' class='logo' src='https://blogger.googleusercontent.com/img/a/AVvXsEhzKpAygWNJ08LLagY4eXuRhNkZglrexrJM5GphJou1R6CeM_4SRDGqtIflmxbVhI8pCD6NlOSY35k5-JzDPowpvu-B6zMnwQBAl7FaHgBJMTRbB01pH5f8qZq6-Hsj468F4QzFQikO4se7UhIgw8OAIW0EKWsFlYFZtykg-bgDwh0CFuALy31QRHNi4Zc=s150'/>
+        <img alt='Markmix logo' class='logo' src='https://cdn.jsdelivr.net/gh/Markmix-Studios/msl-favicons@refs/heads/main/mstudios-150×150.webp'/>
       </a>
 	</div>
     <div class='copyright-footer'><b:tag name='span' style='overflow:auto;position:absolute;height:1px;width:1px;'>Created By <b:tag name='a'><b:attr name='href' value='https://markmixstudios.com/about'/>Markmix Studios</b:tag></b:tag>
