--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <link href='https://bio.markmixstudios.com' rel='canonical'/>
     <meta content='https://bio.markmixstudios.com/' property='og:url'/>
     <meta content='Web Developer & Tech Enthusiast' name='og:description'/>
-    <meta rel='preload' content='https://blogger.googleusercontent.com/img/a/AVvXsEhzKpAygWNJ08LLagY4eXuRhNkZglrexrJM5GphJou1R6CeM_4SRDGqtIflmxbVhI8pCD6NlOSY35k5-JzDPowpvu-B6zMnwQBAl7FaHgBJMTRbB01pH5f8qZq6-Hsj468F4QzFQikO4se7UhIgw8OAIW0EKWsFlYFZtykg-bgDwh0CFuALy31QRHNi4Zc=s150' property='og:image'/>
+    <meta rel='preload' content='https://cdn.jsdelivr.net/gh/Markmix-Studios/msl-favicons@refs/heads/main/mstudios-150×150.webp' property='og:image'/>
     <meta content='@1b.i.s.m.a.r.k_' property='profile:username'/>
     <meta content='summary' name='twitter:card'/>
     <meta content='@1b.i.s.m.a.r.k_' name='twitter:title'/>
