--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ a:link,a:visited,.widget_bottom h1,.widget_bottom .caption{color:#ffffff}.bg-mar
   <li class="youtube"><a href="https://www.youtube.com/@markmix.studios" title="YouTube"></a></li>
   <li class="tiktok"><a href="#" title="TikTok"></a></li>
   <li class="pinterest"><a href="https://uk.pinterest.com/onebismark/" title="Pinterest"></a></li>
-  <li class="github"><a href="https://github.com/bismarkagyapong" title="GitHub"></a></li>
+  <li class="github"><a href="https://github.com/onebismark" title="GitHub"></a></li>
 </ul>
 </div>
 </div><div class="widget LinkList">
