--- a/index.html
+++ b/index.html
@@ -19,20 +19,20 @@
 
 <!-- Web Manifest for Progressive Web App Support -->
 <link href='https://cdn.jsdelivr.net/gh/Markmix-Studios/msl-favicons/site.webmanifest' rel='manifest'/>
-<title>@1b.i.s.m.a.r.k_</title>
+<title>♔𝑳𝒐𝒓𝒅 𝑩𝒊𝒔𝒎𝒂𝒓𝒒 🦅</title>
     <meta content='width=device-width, initial-scale=1' name='viewport'/>
     <meta content='#212121' name='theme-color'/>
     <meta content='#212121' name='msapplication-navbutton-color'/>
     <link href='https://cdn.jsdelivr.net/gh/Markmix-Studios/msl-favicons/favicon.ico' rel='icon' type='image/x-icon'/>
     <meta content='Web Developer & Tech Enthusiast' name='description'/>
-    <meta content='Bismark The Philos BioLink' property='og:title'/>
+    <meta content='♔𝑳𝒐𝒓𝒅 𝑩𝒊𝒔𝒎𝒂𝒓𝒒 🦅' property='og:title'/>
     <link href='https://me.markmixstudios.com' rel='canonical'/>
     <meta content='https://me.markmixstudios.com/' property='og:url'/>
     <meta content='Web Developer & Tech Enthusiast' name='og:description'/>
     <meta rel='preload' content='https://cdn.jsdelivr.net/gh/Markmix-Studios/msl-favicons@refs/heads/main/mstudios-150×150.webp' property='og:image'/>
     <meta content='@1b.i.s.m.a.r.k_' property='profile:username'/>
     <meta content='summary' name='twitter:card'/>
-    <meta content='@1b.i.s.m.a.r.k_' name='twitter:title'/>
+    <meta content='♔𝑩𝒊𝒔𝒎𝒂𝒓𝒒 🦅' name='twitter:title'/>
     <meta rel='preload' content='https://cdn.jsdelivr.net/gh/bismarkagyapong/files@refs/heads/main/markmix-diamond-profile-pic.webp' property='twitter:image'/>
     <meta content='https://markmixstudios.com/' name='twitter:url'/>
     <link href='https://pro.fontawesome.com/releases/v5.15.0/css/all.css' rel='stylesheet' type='text/css'/>
@@ -74,10 +74,10 @@ a:link,a:visited,.widget_bottom h1,.widget_bottom .caption{color:#ffffff}.bg-mar
 <div class="widget-content">
 <ul class="social">
   <li class="instagram"><a href="https://www.instagram.com/1b.i.s.m.a.r.k_" title="Instagram"></a></li>
-  <li class="twitter"><a href="#" title="Twitter"></a></li>
+  <li class="twitter"><a href="https://x.com/onebismark_" title="Twitter"></a></li>
   <li class="facebook"><a href="https://www.facebook.com/onebismarq" title="Facebook"></a></li>
   <li class="youtube"><a href="https://www.youtube.com/@markmix.studios" title="YouTube"></a></li>
-  <li class="tiktok"><a href="#" title="TikTok"></a></li>
+  <li class="tiktok"><a href="https://tiktok.com/lord_bismarq" title="TikTok"></a></li>
   <li class="pinterest"><a href="https://uk.pinterest.com/onebismark/" title="Pinterest"></a></li>
 <li class="snapchat"><a href="https://snapchat.com/@onebismark" title="Snapchat"></a></li>
   <li class="github"><a href="https://github.com/onebismark" title="GitHub"></a></li>
