--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ a:link,a:visited,.widget_bottom h1,.widget_bottom .caption{color:#ffffff}.bg-mar
   <li class="instagram"><a href="https://www.instagram.com/1b.i.s.m.a.r.k_" title="Instagram"></a></li>
   <li class="twitter"><a href="https://x.com/onebismark_" title="Twitter"></a></li>
   <li class="facebook"><a href="https://www.facebook.com/onebismarq" title="Facebook"></a></li>
-  <li class="youtube"><a href="https://www.youtube.com/@markmix.studios" title="YouTube"></a></li>
+  <li class="youtube"><a href="https://www.youtube.com/@onebismark" title="YouTube"></a></li>
   <li class="tiktok"><a href="https://tiktok.com/lord_bismarq" title="TikTok"></a></li>
   <li class="pinterest"><a href="https://uk.pinterest.com/onebismark/" title="Pinterest"></a></li>
 <li class="snapchat"><a href="https://snapchat.com/@onebismark" title="Snapchat"></a></li>
