--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <meta content='https://me.markmixstudios.com/' property='og:url'/>
     <meta content='Web Developer & Tech Enthusiast' name='og:description'/>
     <meta rel='preload' content='https://cdn.jsdelivr.net/gh/Markmix-Studios/msl-favicons@refs/heads/main/mstudios-150×150.webp' property='og:image'/>
-    <meta content='@1b.i.s.m.a.r.k_' property='profile:username'/>
+    <meta content='♔𝑳𝒐𝒓𝒅 𝑩𝒊𝒔𝒎𝒂𝒓𝒒 🦅' property='profile:username'/>
     <meta content='summary' name='twitter:card'/>
     <meta content='♔𝑩𝒊𝒔𝒎𝒂𝒓𝒒 🦅' name='twitter:title'/>
     <meta rel='preload' content='https://cdn.jsdelivr.net/gh/bismarkagyapong/files@refs/heads/main/markmix-diamond-profile-pic.webp' property='twitter:image'/>
