--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@ a:link,a:visited,.widget_bottom h1,.widget_bottom .caption{color:#ffffff}.bg-mar
   <li class="tiktok"><a href="https://tiktok.com/lord_bismarq" title="TikTok"></a></li>
   <li class="pinterest"><a href="https://uk.pinterest.com/onebismark/" title="Pinterest"></a></li>
 <li class="snapchat"><a href="https://snapchat.com/@onebismark" title="Snapchat"></a></li>
+<li class="bluesky"><a href="https://bsky.app/profile/onebismark.bsky.social" title="Bluesky"></a></li>
   <li class="github"><a href="https://github.com/onebismark" title="GitHub"></a></li>
 </ul>
 </div>
