--- a/index.html
+++ b/index.html
@@ -101,6 +101,10 @@ a:link,a:visited,.widget_bottom h1,.widget_bottom .caption{color:#ffffff}.bg-mar
 </div>
 <div class="bioLink-item">
 <div class="bioLink-shadow"></div>
+<a href="https://msl.markmixstudios.com" title="Markmix Studios"><span class="bioLink-text">Markmix Studios</span></a>
+</div>
+<div class="bioLink-item">
+<div class="bioLink-shadow"></div>
 <a href="https://markmixstudios.com/p/contact.html" title="Contact me"><span class="bioLink-text">Contact me</span></a>
 </div>
     <div class='copyright-web'>
