--- a/index.html
+++ b/index.html
@@ -20,20 +20,20 @@
 
 <!-- Web Manifest for Progressive Web App Support -->
 <link href='https://cdn.jsdelivr.net/gh/Markmix-Studios/msl-favicons/site.webmanifest' rel='manifest'/>
-<title>♔𝑳𝒐𝒓𝒅 𝑩𝒊𝒔𝒎𝒂𝒓𝒒 🦅</title>
+<title>♔𝑳𝒐𝒓𝒅 𝑩𝒊𝒔𝒎𝒂𝒓𝒌 🦅</title>
     <meta content='width=device-width, initial-scale=1' name='viewport'/>
     <meta content='#212121' name='theme-color'/>
     <meta content='#212121' name='msapplication-navbutton-color'/>
     <link href='https://cdn.jsdelivr.net/gh/Markmix-Studios/msl-favicons/favicon.ico' rel='icon' type='image/x-icon'/>
     <meta content='Web Developer & Tech Enthusiast' name='description'/>
-    <meta content='♔𝑳𝒐𝒓𝒅 𝑩𝒊𝒔𝒎𝒂𝒓𝒒 🦅' property='og:title'/>
+    <meta content='♔𝑳𝒐𝒓𝒅 𝑩𝒊𝒔𝒎𝒂𝒓𝒌 🦅' property='og:title'/>
     <link href='https://me.markmixstudios.com' rel='canonical'/>
     <meta content='https://me.markmixstudios.com/' property='og:url'/>
     <meta content='Web Developer & Tech Enthusiast' name='og:description'/>
     <meta rel='preload' content='https://cdn.jsdelivr.net/gh/Markmix-Studios/msl-favicons@refs/heads/main/mstudios-150×150.webp' property='og:image'/>
-    <meta content='♔𝑳𝒐𝒓𝒅 𝑩𝒊𝒔𝒎𝒂𝒓𝒒 🦅' property='profile:username'/>
+    <meta content='♔𝑳𝒐𝒓𝒅 𝑩𝒊𝒔𝒎𝒂𝒓𝒌 🦅' property='profile:username'/>
     <meta content='summary' name='twitter:card'/>
-    <meta content='♔𝑩𝒊𝒔𝒎𝒂𝒓𝒒 🦅' name='twitter:title'/>
+    <meta content='♔𝑩𝒊𝒔𝒎𝒂𝒓𝒌 🦅' name='twitter:title'/>
     <meta rel='preload' content='https://cdn.jsdelivr.net/gh/bismarkagyapong/files@refs/heads/main/markmix-diamond-profile-pic.webp' property='twitter:image'/>
     <meta content='https://markmixstudios.com/' name='twitter:url'/>
     <link href='https://pro.fontawesome.com/releases/v5.15.0/css/all.css' rel='stylesheet' type='text/css'/>
@@ -66,9 +66,9 @@ a:link,a:visited,.widget_bottom h1,.widget_bottom .caption{color:#ffffff}.bg-mar
 <img alt="@1b.i.s.m.a.r.k_" src='https://cdn.jsdelivr.net/gh/bismarkagyapong/files@refs/heads/main/markmix-diamond-profile-pic.webp'>
 	</div>
 <div class="widget-flex">
-<h1 class="title">♔𝑳𝒐𝒓𝒅 𝑩𝒊𝒔𝒎𝒂𝒓𝒒 🦅<svg style='margin-bottom:-2px' fill="none" height="16" viewBox="0 0 16 16" width="16"><path clip-rule="evenodd" d="M8 0L9.99182 1.3121L12.3696 1.29622L13.3431 3.48797L15.3519 4.77336L14.9979 7.14888L16 9.32743L14.431 11.1325L14.1082 13.5126L11.8223 14.1741L10.277 16L8 15.308L5.72296 16L4.17772 14.1741L1.89183 13.5126L1.569 11.1325L0 9.32743L1.00206 7.14888L0.648112 4.77336L2.65693 3.48797L3.6304 1.29622L6.00818 1.3121L8 0Z" fill="#0095F6" fill-rule="evenodd"></path><path clip-rule="evenodd" d="M10.4036 5.20536L7.18853 8.61884L6.12875 7.49364C5.8814 7.23102 5.46798 7.21864 5.20536 7.466C4.94274 7.71335 4.93036 8.12677 5.17771 8.38939L6.71301 10.0195C6.9709 10.2933 7.40616 10.2933 7.66405 10.0195L11.3546 6.10111C11.6019 5.83848 11.5896 5.42507 11.3269 5.17771C11.0643 4.93036 10.6509 4.94274 10.4036 5.20536Z" fill="white" fill-rule="evenodd"></path></svg></h1>
+<h1 class="title">♔𝑳𝒐𝒓𝒅 𝑩𝒊𝒔𝒎𝒂𝒓𝒌 🦅<svg style='margin-bottom:-2px' fill="none" height="16" viewBox="0 0 16 16" width="16"><path clip-rule="evenodd" d="M8 0L9.99182 1.3121L12.3696 1.29622L13.3431 3.48797L15.3519 4.77336L14.9979 7.14888L16 9.32743L14.431 11.1325L14.1082 13.5126L11.8223 14.1741L10.277 16L8 15.308L5.72296 16L4.17772 14.1741L1.89183 13.5126L1.569 11.1325L0 9.32743L1.00206 7.14888L0.648112 4.77336L2.65693 3.48797L3.6304 1.29622L6.00818 1.3121L8 0Z" fill="#0095F6" fill-rule="evenodd"></path><path clip-rule="evenodd" d="M10.4036 5.20536L7.18853 8.61884L6.12875 7.49364C5.8814 7.23102 5.46798 7.21864 5.20536 7.466C4.94274 7.71335 4.93036 8.12677 5.17771 8.38939L6.71301 10.0195C6.9709 10.2933 7.40616 10.2933 7.66405 10.0195L11.3546 6.10111C11.6019 5.83848 11.5896 5.42507 11.3269 5.17771C11.0643 4.93036 10.6509 4.94274 10.4036 5.20536Z" fill="white" fill-rule="evenodd"></path></svg></h1>
 <h2 class="caption">Web Developer & Tech Enthusiast</h2>
-<h2 class="caption"><b>@1b.i.s.m.a.r.k_</b></h2>
+<h2 class="caption"><b>@𝟭𝗯.𝗶.𝘀.𝗺.𝗮.𝗿.𝗸_</b></h2>
 	</div>
 </div>
 </div><div class="widget LinkList">
@@ -81,7 +81,6 @@ a:link,a:visited,.widget_bottom h1,.widget_bottom .caption{color:#ffffff}.bg-mar
   <li class="tiktok"><a href="https://tiktok.com/lord_bismarq" title="TikTok"></a></li>
   <li class="pinterest"><a href="https://uk.pinterest.com/onebismark/" title="Pinterest"></a></li>
 <li class="snapchat"><a href="https://snapchat.com/@onebismark" title="Snapchat"></a></li>
-<li class="bluesky"><a href="https://bsky.app/profile/onebismark.bsky.social" title="Bluesky"></a></li>
   <li class="github"><a href="https://github.com/onebismark" title="GitHub"></a></li>
 </ul>
 </div>
