--- a/socials.html
+++ b/socials.html
@@ -97,6 +97,7 @@
         <p><a href="https://leetcode.com/u/onebismark/">LeetCode</a></p>
         <p><a href="https://github.com/onebismark">GitHub</a></p>
         <p><a href="https://markmixstudios.com">Website</a></p>
+        <p><a href="https://msl.markmixstudios.com">Markmix Studios</a></p>
         <p><a href="https://me.markmixstudios.com/">♔ Developer BioLink 🦅</a></p>
     </main>
 </body>
