--- a/index.html
+++ b/index.html
@@ -89,6 +89,10 @@ a:link,a:visited,.widget_bottom h1,.widget_bottom .caption{color:#ffffff}.bg-mar
 <div class="bioLink">
 <div class="bioLink-item">
 <div class="bioLink-shadow"></div>
+<a href="https://me.markmixstudios.com/socials" title="My Socials"><span class="bioLink-text">Socials</span></a>
+</div>
+<div class="bioLink-item">
+<div class="bioLink-shadow"></div>
 <a href="https://markmixstudios.com/search" title="My Blog"><span class="bioLink-text">My Blog</span></a>
 </div>
 <div class="bioLink-item">
