--- a/socials.html
+++ b/socials.html
@@ -91,9 +91,9 @@
         <p><a href="https://x.com/onebismark_">TwitterX</a></p>
         <p><a href="https://instagram.com/1b.i.s.m.a.r.k_">Instagram</a></p>
         <p><a href="https://facebook.com/onebismarq">Facebook</a></p>
-        <p><a href="https://tiktok.com/lord_bismarq"></a>TikTok</p>
-        <p><a href="https://snapchat.com/@onebismark"></a>Snapchat</p>
-        <p><a href="https://uk.pinterest.com/onebismark/"></a>Pinterest</p>
+        <p><a href="https://tiktok.com/lord_bismarq">TikTok</a></p>
+        <p><a href="https://snapchat.com/@onebismark">Snapchat</a></p>
+        <p><a href="https://uk.pinterest.com/onebismark/">Pinterest</a></p>
         <p><a href="https://bsky.app/profile/onebismark.bsky.social">BlueSky</a></p>
         <p><a href="https://mastodon.social/@onebismark">Mastodon</a></p>
         <p><a href="https://leetcode.com/u/onebismark/">LeetCode</a></p>
