--- a/socials.html
+++ b/socials.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="eng">
+<html lang="en"> <!-- Changed to "en" (correct language code) -->
 <head>
     <!-- Standard Favicons -->
     <link href='https://cdn.jsdelivr.net/gh/Markmix-Studios/msl-favicons/favicon-16x16.png' rel='icon' sizes='16x16' type='image/png'/>
@@ -23,20 +23,30 @@
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>♔𝑳𝒐𝒓𝒅 𝑩𝒊𝒔𝒎𝒂𝒓𝒌 𝑨𝒄𝒄𝒐𝒖𝒏𝒕𝒔 🦅</title>
+    <title>𝑳𝒐𝒓𝒅 𝑩𝒊𝒔𝒎𝒂𝒓𝒌 𝑺𝒐𝒄𝒊𝒂𝒍 𝑨𝒄𝒄𝒐𝒖𝒏𝒕𝒔</title>
     <meta name="author" content="♔𝑳𝒐𝒓𝒅 𝑩𝒊𝒔𝒎𝒂𝒓𝒌 🦅">
     <meta name="description" content="Web Dev. and Tech Enthusiast.">
     <meta property="og:image" content="https://cdn.jsdelivr.net/gh/Markmix-Studios/msl-favicons@refs/heads/main/mstudios-150×150.webp">
+    <!-- Preconnect to Google Fonts for faster loading -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;800&display=swap');
+
+        :root {
+            --primary-color: #ffffff;
+            --hover-color: #00d4ff; /* Added a hover accent color */
+            --transition-speed: 0.3s;
+        }
 
         html, body {
             height: 100%;
             margin: 0;
             padding: 0;
             font-family: 'Montserrat', sans-serif;
-            background: black;
+            background: #000000;
+            color: var(--primary-color);
         }
 
         body {
@@ -44,43 +54,76 @@
             justify-content: center;
             align-items: center;
             text-align: center;
+            line-height: 1.6;
         }
 
         main {
             width: 100%;
             max-width: 600px;
-            padding: 20px;
+            padding: 2rem;
+            animation: fadeIn 0.5s ease-out; /* Smooth fade-in effect */
+        }
+
+        @keyframes fadeIn {
+            from { opacity: 0; transform: translateY(10px); }
+            to { opacity: 1; transform: translateY(0); }
         }
 
         h1 {
-            color: white;
-            margin: 0 0 20px 0;
+            margin: 0 0 1rem 0;
+            font-size: clamp(2rem, 5vw, 3rem); /* Responsive font size */
+            font-weight: 800;
         }
 
         h2 {
-            color: white;
-            font-style: italic;
-            margin: 0 0 30px 0;
-            font-size: 1em;
+            margin: 0 0 2rem 0;
+            font-size: 1.1rem;
+            font-weight: 400;
+            opacity: 0.8;
         }
 
-        p {
-            margin: 10px 0;
+        .links {
+            display: flex;
+            flex-direction: column;
+            gap: 0.75rem;
         }
 
         a {
-            color: white;
+            color: var(--primary-color);
             text-decoration: none;
+            transition: 
+                color var(--transition-speed), 
+                transform var(--transition-speed);
             display: inline-block;
-            padding: 5px 0;
         }
 
         a::after {
             content: ' ›';
+            transition: transform var(--transition-speed);
         }
 
         a:hover {
-            text-decoration: underline;
+            color: var(--hover-color);
+            transform: translateX(5px);
+        }
+
+        a:hover::after {
+            transform: translateX(3px);
+        }
+
+        /* Accessibility: Focus styles */
+        a:focus-visible {
+            outline: 2px solid var(--hover-color);
+            outline-offset: 3px;
+        }
+
+        /* Dark mode preference (optional) */
+        @media (prefers-color-scheme: light) {
+            :root {
+                --primary-color: #000000;
+                --hover-color: #ff00aa;
+                background: #ffffff;
+            }
         }
     </style>
 </head>
@@ -88,19 +131,22 @@
 <body>
     <main>
         <h1>𝑳𝒐𝒓𝒅 𝑩𝒊𝒔𝒎𝒂𝒓𝒌 𝑺𝒐𝒄𝒊𝒂𝒍 𝑨𝒄𝒄𝒐𝒖𝒏𝒕𝒔</h1>
-        <p><a href="https://x.com/onebismark_">TwitterX</a></p>
-        <p><a href="https://instagram.com/1b.i.s.m.a.r.k_">Instagram</a></p>
-        <p><a href="https://facebook.com/onebismarq">Facebook</a></p>
-        <p><a href="https://tiktok.com/lord_bismarq">TikTok</a></p>
-        <p><a href="https://snapchat.com/@onebismark">Snapchat</a></p>
-        <p><a href="https://uk.pinterest.com/onebismark/">Pinterest</a></p>
-        <p><a href="https://bsky.app/profile/onebismark.bsky.social">BlueSky</a></p>
-        <p><a href="https://mastodon.social/@onebismark">Mastodon</a></p>
-        <p><a href="https://leetcode.com/u/onebismark/">LeetCode</a></p>
-        <p><a href="https://github.com/onebismark">GitHub</a></p>
-        <p><a href="https://markmixstudios.com">Website</a></p>
-        <p><a href="https://msl.markmixstudios.com">Markmix Studios</a></p>
-        <p><a href="https://me.markmixstudios.com/">♔ Developer BioLink 🦅</a></p>
+        
+        <div class="links">
+        <a href="https://x.com/onebismark_">TwitterX</a>
+        <a href="https://instagram.com/1b.i.s.m.a.r.k_">Instagram</a>
+        <a href="https://facebook.com/onebismarq">Facebook</a>
+        <a href="https://tiktok.com/lord_bismarq">TikTok</a>
+        <a href="https://snapchat.com/@onebismark">Snapchat</a>
+        <a href="https://uk.pinterest.com/onebismark/">Pinterest</a>
+        <a href="https://bsky.app/profile/onebismark.bsky.social">BlueSky</a>
+        <a href="https://mastodon.social/@onebismark">Mastodon</a>
+        <a href="https://leetcode.com/u/onebismark/">LeetCode</a>
+        <a href="https://github.com/onebismark">GitHub</a>
+        <a href="https://markmixstudios.com">Website</a>
+        <a href="https://msl.markmixstudios.com">Markmix Studios</a>
+        <a href="https://me.markmixstudios.com/">♔ Developer BioLink 🦅</a>
+        </div>
     </main>
 </body>
 </html>
