--- a/socials.html
+++ b/socials.html
@@ -136,7 +136,7 @@
         <a href="https://x.com/onebismark_">TwitterX</a>
         <a href="https://instagram.com/1b.i.s.m.a.r.k_">Instagram</a>
         <a href="https://facebook.com/onebismarq">Facebook</a>
-        <a href="https://tiktok.com/lord_bismarq">TikTok</a>
+        <a href="https://tiktok.com/@lord_bismarq">TikTok</a>
         <a href="https://snapchat.com/@onebismark">Snapchat</a>
         <a href="https://uk.pinterest.com/onebismark/">Pinterest</a>
         <a href="https://bsky.app/profile/onebismark.bsky.social">BlueSky</a>
