--- a/socials.html
+++ b/socials.html
@@ -143,6 +143,7 @@
         <a href="https://mastodon.social/@onebismark">Mastodon</a>
         <a href="https://leetcode.com/u/onebismark/">LeetCode</a>
         <a href="https://app.daily.dev/onebismak">Daily.dev</a>
+        <a href="https://yhype.me/github/@onebismarkhttps://dev.to/onebismark">Dev.to</a>
         <a href="https://stackoverflow.com/users/31050452/onebismark">StackOverflow</a>
         <a href="https://yhype.me/github/@onebismark">Y-Hype</a>
         <a href="https://github.com/onebismark">GitHub</a>
