--- a/socials.html
+++ b/socials.html
@@ -134,8 +134,9 @@
         
         <div class="links">
         <a href="https://x.com/onebismark_">TwitterX</a>
-        <a href="https://instagram.com/1b.i.s.m.a.r.k_">Instagram</a>
+        <a href="https://instagram.com/onebismark">Instagram</a>
         <a href="https://facebook.com/onebismarq">Facebook</a>
+        <a href="https://youtube.com/@onebismark">YouTube</a>
         <a href="https://tiktok.com/@lord_bismarq">TikTok</a>
         <a href="https://snapchat.com/@onebismark">Snapchat</a>
         <a href="https://uk.pinterest.com/onebismark/">Pinterest</a>
