--- a/index.html
+++ b/index.html
@@ -1,41 +1,82 @@
 <!DOCTYPE html>
 <html lang='en'>
 <head>
-<!-- Standard Favicons -->
-<link href='https://cdn.jsdelivr.net/gh/Markmix-Studios/msl-favicons/favicon-16x16.png' rel='icon' sizes='16x16' type='image/png'/>
-<link href='https://cdn.jsdelivr.net/gh/Markmix-Studios/msl-favicons/favicon-32x32.png' rel='icon' sizes='32x32' type='image/png'/>
-<link href='https://cdn.jsdelivr.net/gh/Markmix-Studios/msl-favicons/favicon-96x96.png' rel='icon' sizes='96x96' type='image/png'/>
-<link href='https://cdn.jsdelivr.net/gh/Markmix-Studios/msl-favicons/web-app-manifest-192x192.png' rel='icon' sizes='192x192' type='image/png'/>
-<link href='https://cdn.jsdelivr.net/gh/Markmix-Studios/msl-favicons/web-app-manifest-512x512.png' rel='icon' sizes='512x512' type='image/png'/>
+<!-- Primary Meta Tags -->
+<title>Bismark Agyapong – Official Links | Markmix Studios</title>
+<meta name="title" content="Bismark Agyapong – Official Links | Markmix Studios">
+<meta name="description" content="Official links from Bismark Agyapong, founder of Markmix Studios. Connect, explore projects, and follow on social platforms.">
+<meta name="keywords" content="Bismark Agyapong, Lord Bismark, Markmix Studios, Web Developer Ghana, Social Bio Link, Portfolio, me.markmixstudios.com, Linktree Alternative">
+<meta name="author" content="Bismark Agyapong">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="robots" content="index, follow">
 
-<!-- Apple Devices -->
-<link href='https://cdn.jsdelivr.net/gh/Markmix-Studios/msl-favicons/apple-touch-icon.png' rel='apple-touch-icon' sizes='180x180'/>
+<!-- Open Graph / Facebook -->
+<meta property="og:type" content="website">
+<meta property="og:site_name" content="Markmix Studios">
+<meta property="og:url" content="https://me.markmixstudios.com/socials">
+<meta property="og:title" content="Bismark Agyapong – Official Links | Markmix Studios">
+<meta property="og:description" content="Find all official links of Bismark Agyapong, web creator and founder of Markmix Studios. Socials, blog, portfolio and more.">
+<meta property="og:image" content="https://cdn.jsdelivr.net/gh/onebismark/files@refs/heads/main/bismark.webp">
+
+<!-- Twitter -->
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:url" content="https://me.markmixstudios.com/socials">
+<meta name="twitter:title" content="Bismark Agyapong – Official Links | Markmix Studios">
+<meta name="twitter:description" content="View all links from Bismark Agyapong, founder of Markmix Studios. Follow on social, explore projects, and more.">
+<meta name="twitter:image" content="https://cdn.jsdelivr.net/gh/onebismark/files@refs/heads/main/bismark.webp">
+
+<!-- Favicon -->
+<link rel="icon" type="image/png" href="https://cdn.jsdelivr.net/gh/Markmix-Studios/msl-favicons/favicon-96x96.png" />
+<link rel="icon" type="image/png" sizes="16x16" href="https://cdn.jsdelivr.net/gh/Markmix-Studios/msl-favicons/favicon-16x16.png" />
+<link rel="icon" type="image/png" sizes="32x32" href="https://cdn.jsdelivr.net/gh/Markmix-Studios/msl-favicons/favicon-32x32.png" />
+<link rel="icon" type="image/png" sizes="192x192" href="https://cdn.jsdelivr.net/gh/Markmix-Studios/msl-favicons/web-app-manifest-192x192.png" />
+<link rel="icon" type="image/png" sizes="512x512" href="https://cdn.jsdelivr.net/gh/Markmix-Studios/msl-favicons/web-app-manifest-512x512.png" />
+
+<!-- Apple Touch Icon -->
+<link rel="apple-touch-icon" sizes="180x180" href="https://cdn.jsdelivr.net/gh/Markmix-Studios/msl-favicons/apple-touch-icon.png" />
 
 <!-- Windows Tiles -->
-<meta content='https://cdn.jsdelivr.net/gh/Markmix-Studios/msl-favicons/favicon-144.png' name='msapplication-TileImage'/>
-<meta content='#ffffff' name='msapplication-TileColor'/>
+<meta name="msapplication-TileImage" content="https://cdn.jsdelivr.net/gh/Markmix-Studios/msl-favicons/favicon-144.png" />
+<meta name="msapplication-TileColor" content="#ffffff" />
 
 <!-- Fallback .ico -->
-<link href='https://cdn.jsdelivr.net/gh/Markmix-Studios/msl-favicons/favicon.ico' rel='icon' type='image/x-icon'/>
+<link rel="icon" type="image/x-icon" href="https://cdn.jsdelivr.net/gh/Markmix-Studios/msl-favicons/favicon.ico" />
 
-<!-- Web Manifest for Progressive Web App Support -->
-<link href='https://cdn.jsdelivr.net/gh/Markmix-Studios/msl-favicons/site.webmanifest' rel='manifest'/>
-<title>♔𝑳𝒐𝒓𝒅 𝑩𝒊𝒔𝒎𝒂𝒓𝒌 🦅</title>
-    <meta content='width=device-width, initial-scale=1' name='viewport'/>
-    <meta content='#212121' name='theme-color'/>
-    <meta content='#212121' name='msapplication-navbutton-color'/>
-    <link href='https://cdn.jsdelivr.net/gh/Markmix-Studios/msl-favicons/favicon.ico' rel='icon' type='image/x-icon'/>
-    <meta content='Web Developer & Tech Enthusiast' name='description'/>
-    <meta content='♔𝑳𝒐𝒓𝒅 𝑩𝒊𝒔𝒎𝒂𝒓𝒌 🦅' property='og:title'/>
-    <link href='https://me.markmixstudios.com' rel='canonical'/>
-    <meta content='https://me.markmixstudios.com/' property='og:url'/>
-    <meta content='Web Developer & Tech Enthusiast' name='og:description'/>
-    <meta rel='preload' content='https://cdn.jsdelivr.net/gh/Markmix-Studios/msl-favicons@refs/heads/main/mstudios-150×150.webp' property='og:image'/>
-    <meta content='♔𝑳𝒐𝒓𝒅 𝑩𝒊𝒔𝒎𝒂𝒓𝒌 🦅' property='profile:username'/>
-    <meta content='summary' name='twitter:card'/>
-    <meta content='♔𝑩𝒊𝒔𝒎𝒂𝒓𝒌 🦅' name='twitter:title'/>
-    <meta rel='preload' content='https://cdn.jsdelivr.net/gh/bismarkagyapong/files@refs/heads/main/markmix-diamond-profile-pic.webp' property='twitter:image'/>
-    <meta content='https://markmixstudios.com/' name='twitter:url'/>
+<!-- Manifest -->
+<link rel="manifest" href="https://cdn.jsdelivr.net/gh/Markmix-Studios/msl-favicons/site.webmanifest" />
+
+<!-- Canonical URL -->
+<link rel="canonical" href="https://me.markmixstudios.com/socials" />
+
+<!-- Schema Markup -->
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Person",
+  "name": "Bismark Agyapong",
+  "alternateName": "Lord Bismark",
+  "url": "https://me.markmixstudios.com/socials",
+  "image": "https://cdn.jsdelivr.net/gh/onebismark/files@refs/heads/main/bismark.webp",
+  "jobTitle": "Web Developer & Creative Technologist",
+  "worksFor": {
+    "@type": "Organization",
+    "name": "Markmix Studios Limited",
+    "url": "https://markmixstudios.com/about"
+  },
+  "sameAs": [
+    "https://www.facebook.com/onebismark",
+    "https://www.instagram.com/onebismark",
+    "https://www.youtube.com/@onebismark",
+    "https://github.com/onebismark"
+  ],
+  "description": "Official biolink page of Bismark Agyapong, web developer and creator of Markmix Studios. Find links to social platforms, projects, and more.",
+  "gender": "Male",
+  "homeLocation": {
+    "@type": "Place",
+    "name": "Ghana"
+  }
+}
+</script>
     <link href='https://pro.fontawesome.com/releases/v5.15.0/css/all.css' rel='stylesheet' type='text/css'/>
     <link href='https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap' rel='stylesheet'/>
     <link rel="preconnect" href="https://fonts.googleapis.com"/>
