--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang='en'>
 <head>
 <!-- Primary Meta Tags -->
-<title>Bismark Agyapong – Official Links | Markmix Studios</title>
+<title>𝑳𝒐𝒓𝒅 𝑩𝒊𝒔𝒎𝒂𝒓𝒌🦅 – Official Links | Markmix Studios</title>
 <meta name="title" content="Bismark Agyapong – Official Links | Markmix Studios">
 <meta name="description" content="Official links from Bismark Agyapong, founder of Markmix Studios. Connect, explore projects, and follow on social platforms.">
 <meta name="keywords" content="Bismark Agyapong, Lord Bismark, Markmix Studios, Web Developer Ghana, Social Bio Link, Portfolio, me.markmixstudios.com, Linktree Alternative">
