--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 <link rel="manifest" href="https://cdn.jsdelivr.net/gh/Markmix-Studios/msl-favicons/site.webmanifest" />
 
 <!-- Canonical URL -->
-<link rel="canonical" href="https://me.markmixstudios.com/socials" />
+<link rel="canonical" href="https://me.markmixstudios.com" />
 
 <!-- Schema Markup -->
 <script type="application/ld+json">
