--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Primary Meta Tags -->
-<title>𝑳𝒐𝒓𝒅 𝑩𝒊𝒔𝒎𝒂𝒓𝒌  – Official Links | Markmix Studios</title>
+<title>𝑳𝒐𝒓𝒅 𝑩𝒊𝒔𝒎𝒂𝒓𝒌 – BioLinks</title>
 <meta name="title" content="Bismark Agyapong – Official Links | Markmix Studios">
-<meta name="description" content="Official links from Bismark Agyapong, founder of Markmix Studios. Connect, explore projects, and follow on social platforms.">
+<meta name="description" content="Official links of Bismark Agyapong, founder of Markmix Studios. Connect, explore projects, and follow on social platforms.">
 <meta name="keywords" content="Bismark Agyapong, Lord Bismark, Markmix Studios, Web Developer Ghana, Social Bio Link, Portfolio, me.markmixstudios.com, Linktree Alternative">
-<meta name="author" content="Bismark Agyapong (𝑳𝒐𝒓𝒅 𝑩𝒊𝒔𝒎𝒂𝒓𝒌 )">
+<meta name="author" content="Bismark Agyapong (𝑳𝒐𝒓𝒅 𝑩𝒊𝒔𝒎𝒂𝒓𝒌)">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="robots" content="index, follow">
 
