--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <!-- Primary Meta Tags -->
 <title>Lord Bismark: Web Dev | Markmix Studios</title>
 <meta name="title" content="Bismark Agyapong – Official Links | Markmix Studios">
-<meta name="description" content="Official links of Bismark Agyapong, founder of Markmix Studios. Connect, explore projects, and follow on social platforms.">
+<meta name="description" content="Official BioLink of Bismark Agyapong, founder of Markmix Studios. Connect, explore projects, and follow on social platforms.">
 <meta name="keywords" content="Bismark Agyapong, Lord Bismark, Markmix Studios, Web Developer Ghana, Social Bio Link, Portfolio, me.markmixstudios.com, Linktree Alternative">
-<meta name="author" content="Bismark Agyapong (𝑳𝒐𝒓𝒅 𝑩𝒊𝒔𝒎𝒂𝒓𝒌)">
+<meta name="author" content="Bismark Agyapong (Lord Bimark)">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="robots" content="index, follow">
 
@@ -17,7 +17,7 @@
 <meta property="og:site_name" content="Markmix Studios">
 <meta property="og:url" content="https://me.markmixstudios.com/socials">
 <meta property="og:title" content="Bismark Agyapong – Official Links | Markmix Studios">
-<meta property="og:description" content="Find all official links of Bismark Agyapong, web creator and founder of Markmix Studios. Socials, blog, portfolio and more.">
+<meta property="og:description" content="Find all official links of Lord Bismark, web creator and founder of Markmix Studios. Socials, blog, portfolio and more.">
 <meta property="og:image" content="https://cdn.jsdelivr.net/gh/onebismark/files@refs/heads/main/bismark.webp">
 
 <!-- Twitter -->
