--- a/index.html
+++ b/index.html
@@ -420,7 +420,7 @@
                 </div>
             </a>
             
-            <a href="https://markmixstudios.com" class="link-card">
+            <a href="https://blog.markmixstudios.com" class="link-card">
                 <div class="icon">✍️</i></div>
                 <div class="text">
                     <div class="title">Blog</div>
