--- a/index.html
+++ b/index.html
@@ -390,7 +390,7 @@
     <div class="container">
         <div class="profile">
             <img src="https://cdn.jsdelivr.net/gh/onebismark/files@refs/heads/main/bismark.webp" alt="Profile Picture" class="profile-pic">
-            <h1 class="brand-name">𝑳𝒐𝒓𝒅 𝑩𝒊𝒔𝒎𝒂𝒓𝒌 🦅</h1>
+            <h1 class="brand-name">𝗟𝗼𝗿𝗱 𝗕𝗶𝘀𝗺𝗮𝗿𝗸</h1>
             <p class="bio">Digital creator & developer sharing my work across platforms</p>
             <p class="bio">@𝗼𝗻𝗲𝗯𝗶𝘀𝗺𝗮𝗿𝗸</p>
         </div>
