--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
 <meta property="og:url" content="https://me.markmixstudios.com/socials">
 <meta property="og:title" content="Bismark Agyapong – Official Links | Markmix Studios">
 <meta property="og:description" content="Find all official links of Lord Bismark, web creator and founder of Markmix Studios. Socials, blog, portfolio and more.">
-<meta property="og:image" content="https://cdn.jsdelivr.net/gh/onebismark/files@refs/heads/main/bismark.webp">
+<meta property="og:image" content="https://cdn.jsdelivr.net/gh/onebismark/files@refs/heads/main/lordbismark.webp">
 
 <!-- Twitter -->
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:url" content="https://me.markmixstudios.com/socials">
 <meta name="twitter:title" content="Bismark Agyapong – Official Links | Markmix Studios">
 <meta name="twitter:description" content="View all links from Bismark Agyapong, founder of Markmix Studios. Follow on social, explore projects, and more.">
-<meta name="twitter:image" content="https://cdn.jsdelivr.net/gh/onebismark/files@refs/heads/main/bismark.webp">
+<meta name="twitter:image" content="https://cdn.jsdelivr.net/gh/onebismark/files@refs/heads/main/lordbismark.webp">
 
 <!-- Favicon -->
 <link rel="icon" type="image/png" href="https://cdn.jsdelivr.net/gh/Markmix-Studios/msl-favicons/favicon-96x96.png" />
