--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Primary Meta Tags -->
 <title>Lord Bismark: Web Dev | Markmix Studios</title>
-<meta name="title" content="Bismark Agyapong – Official Links | Markmix Studios">
+<meta name="title" content="Bismark Agyapong: Official Links | Markmix Studios">
 <meta name="description" content="Official BioLink of Bismark Agyapong, founder of Markmix Studios. Connect, explore projects, and follow on social platforms.">
 <meta name="keywords" content="Bismark Agyapong, Lord Bismark, Markmix Studios, Web Developer Ghana, Social Bio Link, Portfolio, me.markmixstudios.com, Linktree Alternative">
 <meta name="author" content="Bismark Agyapong (Lord Bimark)">
@@ -18,14 +18,14 @@
 <meta property="og:url" content="https://me.markmixstudios.com/socials">
 <meta property="og:title" content="Bismark Agyapong – Official Links | Markmix Studios">
 <meta property="og:description" content="Find all official links of Lord Bismark, web creator and founder of Markmix Studios. Socials, blog, portfolio and more.">
-<meta property="og:image" content="https://cdn.jsdelivr.net/gh/onebismark/files@refs/heads/main/lordbismark.webp">
+<meta property="og:image" content="https://cdn.jsdelivr.net/gh/onebismark/files@refs/heads/main/lordbismark1.webp">
 
 <!-- Twitter -->
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:url" content="https://me.markmixstudios.com/socials">
 <meta name="twitter:title" content="Bismark Agyapong – Official Links | Markmix Studios">
 <meta name="twitter:description" content="View all links from Bismark Agyapong, founder of Markmix Studios. Follow on social, explore projects, and more.">
-<meta name="twitter:image" content="https://cdn.jsdelivr.net/gh/onebismark/files@refs/heads/main/lordbismark.webp">
+<meta name="twitter:image" content="https://cdn.jsdelivr.net/gh/onebismark/files@refs/heads/main/lordbismark1.webp">
 
 <!-- Favicon -->
 <link rel="icon" type="image/png" href="https://cdn.jsdelivr.net/gh/Markmix-Studios/msl-favicons/favicon-96x96.png" />
@@ -58,7 +58,7 @@
   "name": "Bismark Agyapong",
   "alternateName": "Lord Bismark",
   "url": "https://me.markmixstudios.com/socials",
-  "image": "https://cdn.jsdelivr.net/gh/onebismark/files@refs/heads/main/bismark.webp",
+  "image": "https://cdn.jsdelivr.net/gh/onebismark/files@refs/heads/main/lordbismark1.webp",
   "jobTitle": "Web Developer & Creative Technologist",
   "worksFor": {
     "@type": "Organization",
