--- a/socials.html
+++ b/socials.html
@@ -130,7 +130,7 @@
 
 <body>
     <main>
-        <h1>𝑳𝒐𝒓𝒅 𝑩𝒊𝒔𝒎𝒂𝒓𝒌 𝑺𝒐𝒄𝒊𝒂𝒍 𝑨𝒄𝒄𝒐𝒖𝒏𝒕𝒔</h1>
+        <h1>Lord Bismark: Social Accounts</h1>
         
         <div class="links">
         <a href="https://x.com/onebismark_">TwitterX</a>
