--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Primary Meta Tags -->
-<title>Lord Bismark: Web Dev | Markmix Studios</title>
+<title>Bismark Agyapong: Web Dev | Markmix Studios</title>
 <meta name="title" content="Bismark Agyapong: Official Links | Markmix Studios">
 <meta name="description" content="Official BioLink of Bismark Agyapong, founder of Markmix Studios. Connect, explore projects, and follow on social platforms.">
 <meta name="keywords" content="Bismark Agyapong, Lord Bismark, Markmix Studios, Web Developer Ghana, Social Bio Link, Portfolio, me.markmixstudios.com, Linktree Alternative">
-<meta name="author" content="Bismark Agyapong (Lord Bimark)">
+<meta name="author" content="Bismark Agyapong (𝗕𝗶𝘀𝗺𝗮𝗿𝗸•)">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="robots" content="index, follow">
 
@@ -17,7 +17,7 @@
 <meta property="og:site_name" content="Markmix Studios">
 <meta property="og:url" content="https://me.markmixstudios.com/socials">
 <meta property="og:title" content="Bismark Agyapong – Official Links | Markmix Studios">
-<meta property="og:description" content="Find all official links of Lord Bismark, web creator and founder of Markmix Studios. Socials, blog, portfolio and more.">
+<meta property="og:description" content="Find all official links of 𝗕𝗶𝘀𝗺𝗮𝗿𝗸•, web creator and founder of Markmix Studios. Socials, blog, portfolio and more.">
 <meta property="og:image" content="https://cdn.jsdelivr.net/gh/onebismark/files@refs/heads/main/onebismark.webp">
 
 <!-- Twitter -->
@@ -56,7 +56,7 @@
   "@context": "https://schema.org",
   "@type": "Person",
   "name": "Bismark Agyapong",
-  "alternateName": "Lord Bismark",
+  "alternateName": "𝗕𝗶𝘀𝗺𝗮𝗿𝗸•",
   "url": "https://me.markmixstudios.com/socials",
   "image": "https://cdn.jsdelivr.net/gh/onebismark/files@refs/heads/main/onebismark.webp",
   "jobTitle": "Web Developer & Creative Technologist",
@@ -71,7 +71,7 @@
     "https://www.youtube.com/@onebismark",
     "https://github.com/onebismark"
   ],
-  "description": "Official biolink page of Lord Bismark, web developer and creator of Markmix Studios. Find links to social platforms, projects, and more.",
+  "description": "Official biolink page of Bismark Agyapong, web developer and creator of Markmix Studios. Find links to social platforms, projects, and more.",
   "gender": "Male",
   "homeLocation": {
     "@type": "Place",
@@ -460,7 +460,7 @@
                 </div>
             </a>
             
-            <a href="https://markmixstudios.com/p/contact.html" class="link-card">
+            <a href="https://markmixstudios.com/contact" class="link-card">
                 <div class="icon">✉️️</i></div>
                 <div class="text">
                     <div class="title">Contact</div>
