--- a/socials.html
+++ b/socials.html
@@ -23,7 +23,7 @@
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>𝑳𝒐𝒓𝒅 𝑩𝒊𝒔𝒎𝒂𝒓𝒌 𝑺𝒐𝒄𝒊𝒂𝒍 𝑨𝒄𝒄𝒐𝒖𝒏𝒕𝒔</title>
+    <title>𝑩𝒊𝒔𝒎𝒂𝒓𝒌 𝑺𝒐𝒄𝒊𝒂𝒍 𝑨𝒄𝒄𝒐𝒖𝒏𝒕𝒔</title>
     <meta name="author" content="♔𝑳𝒐𝒓𝒅 𝑩𝒊𝒔𝒎𝒂𝒓𝒌 🦅">
     <meta name="description" content="Web Dev. and Tech Enthusiast.">
     <meta property="og:image" content="https://cdn.jsdelivr.net/gh/Markmix-Studios/msl-favicons@refs/heads/main/mstudios-150×150.webp">
@@ -130,14 +130,14 @@
 
 <body>
     <main>
-        <h1>Lord Bismark: Social Accounts</h1>
+        <h1>𝗕𝗶𝘀𝗺𝗮𝗿𝗸• Social Accounts</h1>
         
         <div class="links">
         <a href="https://x.com/onebismark_">TwitterX</a>
         <a href="https://instagram.com/onebismark">Instagram</a>
         <a href="https://facebook.com/onebismarq">Facebook</a>
         <a href="https://youtube.com/@onebismark">YouTube</a>
-        <a href="https://tiktok.com/@lord_bismarq">TikTok</a>
+        <a href="https://tiktok.com/iambismark">TikTok</a>
         <a href="https://snapchat.com/@onebismark">Snapchat</a>
         <a href="https://uk.pinterest.com/onebismark/">Pinterest</a>
         <a href="https://bsky.app/profile/onebismark.bsky.social">BlueSky</a>
